@@ -1,5 +1,11 @@
 2011-05-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	Submitted by Lech Perczak:
+	bug #30946: Added support for ATmega8/16/32U2
+	* avrdude.conf.in: Add ATmega8/16/32U2 entries.
+
+2011-05-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	Submitted by David A Lyons:
 	patch #7393: Adding ATtiny4313 Device to avrdude.conf.in
 	* avrdude.conf.in: Add ATtiny4313 data.
